# carbon-backend

./: .gitignore  BUG_FIX_PLAN.md  IMPLEMENTATION_COMPLETE.md  TESTING_GUIDE.md  WHATSAPP_VERIFICATION.md  create_test_session.py  report.md  requirements-dev.txt  simulate_workflow.py  test_session_tokens.py  test_whatsapp_verification.py  verify_fix.py
Pdfs/: V4_02_Ch2_Generic.md  V4_05_Ch5_Cropland.md  V4_11_Ch11_N2O&CO2.md  VM0042v2.2 (1).md  convert_pdfs.py
backend/: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  app.py  check_db.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup_test_case.py  test_db.py  test_pipeline.py  test_shim.py
backend/.github/workflows/: test.yml
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: routes.py
backend/app/data/: verra_training_data.csv
backend/app/db/: database.py  models.py
backend/app/services/: burning_detector.py  calculator.py  carbon_model.py  crop_classifier.py  entity_extractor.py  estimate_service.py  feature_engineering.py  gee_ndvi_service.py  gee_pipeline.py  gee_soil_service.py  geo_service.py  i18n.py  residue_analyzer.py  sarvam_service.py  whatsapp_service.py
backend/app/utils/: cache.py  constants.py  gee_config.py  logger.py
backend/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  master_logic.md
backend/tests/: conftest.py  test_calculator_integration.py
backend/tests/integration/: test_carbon_estimation.py
backend/tests/unit/: test_health.py
frontend/: build_log.txt  build_log_2.txt  index.html  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: carbonApi.js
frontend/src/components/: BottomNavBar.jsx
frontend/src/layouts/: MobileLayout.jsx
frontend/src/views/: HistoryView.jsx  HomeView.jsx  MapConfirmView.jsx  ResultsView.jsx  SimpleMapView.jsx  VoiceChatView.jsx
reference_html/: Carbon_Earnings_Report.html  Farm_Map_Confirmation.html  Voice_Chat_Assistant.html  Voice_Onboarding.html
