[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carbon-backend"
version = "0.1.0"
description = "Carbon Sequestration MVP - Verra-compliant satellite-based carbon scoring for Indian smallholder farmers"
requires-python = ">=3.10"
authors = [
    {name = "Joshua Thomas", email = "joshua@example.com"}
]
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # FastAPI & async
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",

    # Database
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "alembic==1.12.1",

    # Geospatial
    "geopandas==0.14.0",
    "shapely==2.0.2",

    # Google Earth Engine
    "ee==0.2",
    "google-auth==2.26.1",

    # ML & Data
    "xgboost==2.0.3",
    "scikit-learn==1.3.2",
    "numpy==1.26.3",
    "pandas==2.1.4",

    # NLP & Language
    "spacy==3.7.2",

    # Caching & async
    "redis==5.0.1",
    "aioredis==2.0.1",

    # Sarvam AI (when available, or via REST API)
    "httpx==0.25.2",
    "aiohttp==3.9.1",

    # Logging & monitoring
    "python-json-logger==2.0.7",
    "sentry-sdk==1.39.1",

    # Utilities
    "python-dotenv==1.0.0",
    "click==8.1.7",
    "tqdm==4.66.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==23.12.1",
    "ruff==0.1.11",
    "mypy==1.7.1",
    "ipython==8.18.1",
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N"]
extend-exclude = [".venv", "migrations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
